# cpp-game

./: .clang-format  .gitignore  CMakeLists.txt  Components.h  Configurations.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  README.md  Systems.h  Vec2.cpp  Vec2.h  main.cpp
sandbox/: sandbox.cpp
